Switch to Gradle 7 version catalogs for dependency management.... (#109)